--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Introducción a la IA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="static/css/Esti.css">
+    <link rel="stylesheet" href="css/Esti.css">
     <style>
         body {
             display: flex;
@@ -52,10 +52,10 @@
                 <i class="bi bi-box-seam"></i> Talleres <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu">
-                <a href="static/Talleres/Taller_1.pdf" target="_blank" class="nav-link">
+                <a href="Talleres/Taller_1.pdf" target="_blank" class="nav-link">
                     <i class="bi bi-file-earmark-check"></i> Taller 1
                 </a>
-                <a href="static/Talleres/Taller_2.pdf" target="_blank" class="nav-link">
+                <a href="Talleres/Taller_2.pdf" target="_blank" class="nav-link">
                     <i class="bi bi-file-earmark-check"></i> Taller 2
                 </a>
                 <a href="#" class="nav-link">
@@ -78,7 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
-        <img src="static/Imagenes/cerebro.jpg" alt="Imagen de cerebro IA">
+        <img src="Imagenes/cerebro.jpg" alt="Imagen de cerebro IA">
         <h2>Información de la página:</h2>
         <p>- Tareas pendientes</p>
         <p>- Talleres</p>
@@ -90,4 +90,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
