--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <i class="bi bi-box-seam"></i> Talleres <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu">
-                <a href="Talleres/Taller_1.pdf" target="_blank" class="nav-link">
+                <a href="https://github.com/Maya0191/IntroduccionIA/blob/0ac0714c99b64da85f93faf0bafe906b49a85ac1/Taller_1.pdf" target="_blank" class="nav-link">
                     <i class="bi bi-file-earmark-check"></i> Taller 1
                 </a>
                 <a href="Talleres/Taller_2.pdf" target="_blank" class="nav-link">
