--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="https://github.com/Maya0191/IntroduccionIA/blob/0ac0714c99b64da85f93faf0bafe906b49a85ac1/Taller_1.pdf" target="_blank" class="nav-link">
                     <i class="bi bi-file-earmark-check"></i> Taller 1
                 </a>
-                <a href="Talleres/Taller_2.pdf" target="_blank" class="nav-link">
+                <a href="https://github.com/Maya0191/IntroduccionIA/blob/2879edb025ab845d5e6d62ca265b275f1c690dc6/Taller_2.pdf" target="_blank" class="nav-link">
                     <i class="bi bi-file-earmark-check"></i> Taller 2
                 </a>
                 <a href="#" class="nav-link">
