--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
-        <img src="Imagenes/cerebro.jpg" alt="Imagen de cerebro IA">
+        <img src="https://github.com/Maya0191/IntroduccionIA/blob/73dfea7f9021c3f1b93eee2b24016458d8e5652e/cerebro.jpg" alt="Imagen de cerebro IA">
         <h2>Información de la página:</h2>
         <p>- Tareas pendientes</p>
         <p>- Talleres</p>
