--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <i class="bi bi-box-seam"></i> Talleres <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu">
-                <a href="https://github.com/Maya0191/IntroduccionIA/blob/0ac0714c99b64da85f93faf0bafe906b49a85ac1/Taller_1.pdf" target="_blank" class="nav-link">
-                    <i class="bi bi-file-earmark-check"></i> Taller 1
+                <a href="Talleres/Taller_1.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 1
                 </a>
-                <a href="https://github.com/Maya0191/IntroduccionIA/blob/2879edb025ab845d5e6d62ca265b275f1c690dc6/Taller_2.pdf" target="_blank" class="nav-link">
-                    <i class="bi bi-file-earmark-check"></i> Taller 2
+                <a href="Talleres/Taller_2.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 2
                 </a>
-                <a href="#" class="nav-link">
-                    <i class="bi bi-file-earmark-check"></i> Taller 3
+                <a href="Talleres/Taller_3.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 3
                 </a>
             </div>
             <a href="#" class="nav-link">
@@ -78,7 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
-        <img src="https://github.com/Maya0191/IntroduccionIA/blob/73dfea7f9021c3f1b93eee2b24016458d8e5652e/cerebro.jpg" alt="Imagen de cerebro IA">
+        <img src="Imagenes/cerebro.jpg" alt="Imagen de cerebro IA">
         <h2>Información de la página:</h2>
         <p>- Tareas pendientes</p>
         <p>- Talleres</p>
