--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <i class="bi bi-box-seam"></i> Talleres <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu">
-                <a href="Talleres/Taller_1.pdf" download class="nav-link">
+                <a href="https://github.com/Maya0191/IntroduccionIA/blob/bf4141811500aaa37d12febcabdd36caab56482d/Taller_1.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 1
                 </a>
                 <a href="Talleres/Taller_2.pdf" download class="nav-link">
