--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="https://github.com/Maya0191/IntroduccionIA/blob/bf4141811500aaa37d12febcabdd36caab56482d/Taller_1.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 1
                 </a>
-                <a href="Talleres/Taller_2.pdf" download class="nav-link">
+                <a href="https://github.com/Maya0191/IntroduccionIA/blob/143bc33902cfba4f5dcb64a3daa35bae40238afc/Taller_2.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 2
                 </a>
                 <a href="Talleres/Taller_3.pdf" download class="nav-link">
