--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <i class="bi bi-box-seam"></i> Talleres <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu">
-                <a href="https://raw.githubusercontent.com/Maya0191/IntroduccionIA/blob/bf4141811500aaa37d12febcabdd36caab56482d/Taller_1.pdf" download class="nav-link">
+                <a href="https://github.com/Maya0191/IntroduccionIA/raw/138514b465a804dc99e675d822a80d06ae3a9fdc/Taller_1.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Taller 1
                 </a>
                 <a href="https://github.com/Maya0191/IntroduccionIA/raw/2879edb025ab845d5e6d62ca265b275f1c690dc6/Taller_2.pdf" download class="nav-link">
