--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
-        <img src="https://github.com/Maya0191/IntroduccionIA/blob/37b9bd54f93f98bd66144cd573ad2a5eaabd7866/cerebro.jpg" alt="Imagen de cerebro IA">
+        <img src="https://raw.githubusercontent.com/Maya0191/IntroduccionIA/37b9bd54f93f98bd66144cd573ad2a5eaabd7866/cerebro.jpg" alt="Imagen de cerebro IA">
         <h2>Información de la página:</h2>
         <p>- Tareas pendientes</p>
         <p>- Talleres</p>
