--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Introducción a la IA</title>
-    <title>Hecho por Mayra Vanesa Serrano Sarmiento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/Esti.css">
@@ -79,6 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
+        <h2 class="Titulo">Hecho por Mayra Vanesa Serrano Sarmiento/h2>
         <img class="decorative" src="https://source.unsplash.com/400x300/?technology,abstract" alt="Imagen decorativa">
         <h2>Información de la página:</h2>
         <p>- Tareas pendientes</p>
