--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="main-content">
         <h1 class="Titulo">Sitio web para proyectos de Introducción a la IA</h1>
-        <h2 class="Titulo">Hecho por Mayra Vanesa Serrano Sarmiento/h2>
+        <h2 class="Titulo">Hecho por Mayra Vanesa Serrano Sarmiento</h2>
         <img class="decorative" src="https://source.unsplash.com/400x300/?technology,abstract" alt="Imagen decorativa">
         <h3>Información de la página:</h3>
         <p>- Tareas pendientes</p>
