--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
             <a href="#" class="nav-link">
                 <i class="bi bi-card-heading"></i> Exposición
             </a>
+            <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#submenu" aria-expanded="false">
+                <i class="bi bi-box-seam"></i> Parcial <i class="bi bi-caret-down-fill"></i>
+            </a>
+            <div class="collapse" id="submenu">
+                <a href="https://github.com/Maya0191/IntroduccionIA/raw/cc5d70e53d2de3faed415d12bd6eafc21ecd23ea/An%C3%A1lisis%20de%20Ruta.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Parcial
+            </a>
         </nav>
     </div>
     <div class="main-content">
@@ -86,6 +93,7 @@
         <p>- Proyectos</p>
         <p>- Ideas</p>
         <p>- Exposición</p>
+        <p>- Parcial</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
