--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
             <a href="#" class="nav-link">
                 <i class="bi bi-gear"></i> Ideas
             </a>
-            <a href="#" class="nav-link">
-                <i class="bi bi-card-heading"></i> Exposición
-            </a>
             <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#submenu2" aria-expanded="false">
-                <i class="bi bi-box-seam"></i> Parcial <i class="bi bi-caret-down-fill"></i>
+                <i class="bi bi-box-seam"></i> Exposicion <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu2">
+                <a href="https://github.com/Maya0191/IntroduccionIA/raw/cc5d70e53d2de3faed415d12bd6eafc21ecd23ea/An%C3%A1lisis%20de%20Ruta.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Ejercicio
+            </a>
+            <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#submenu3" aria-expanded="false">
+                <i class="bi bi-box-seam"></i> Parcial <i class="bi bi-caret-down-fill"></i>
+            </a>
+            <div class="collapse" id="submenu3">
                 <a href="https://github.com/Maya0191/IntroduccionIA/raw/cc5d70e53d2de3faed415d12bd6eafc21ecd23ea/An%C3%A1lisis%20de%20Ruta.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Parcial
             </a>
