--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <i class="bi bi-box-seam"></i> Exposicion <i class="bi bi-caret-down-fill"></i>
             </a>
             <div class="collapse" id="submenu2">
-                <a href="https://github.com/Maya0191/IntroduccionIA/raw/cc5d70e53d2de3faed415d12bd6eafc21ecd23ea/An%C3%A1lisis%20de%20Ruta.pdf" download class="nav-link">
-                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Ejercicio
+                <a href="https://github.com/Maya0191/IntroduccionIA/raw/5fdb42706c7d1da10e561c0f0127df55aff784f2/JUEGO%2016.pdf" download class="nav-link">
+                    <i class="bi bi-file-earmark-arrow-down"></i> Descargar Juego 16
             </a>
             <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#submenu3" aria-expanded="false">
                 <i class="bi bi-box-seam"></i> Parcial <i class="bi bi-caret-down-fill"></i>
