--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 <a href="https://github.com/Maya0191/IntroduccionIA/raw/5fdb42706c7d1da10e561c0f0127df55aff784f2/JUEGO%2016.pdf" download class="nav-link">
                     <i class="bi bi-file-earmark-arrow-down"></i> Descargar Juego 16
             </a>
+            <a href="#" class="nav-link">
+                <i class="bi bi-gear"></i> Parcial
+            </a>
             <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#submenu3" aria-expanded="false">
                 <i class="bi bi-box-seam"></i> Parcial <i class="bi bi-caret-down-fill"></i>
             </a>
